--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Untitled</title>
+  <title>Aniket's Portfolios</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/styles.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -21,15 +21,15 @@
       style="padding: 0px;border: 5.5px solid rgb(255,255,255);border-radius: 50%;margin-bottom: 0px;margin-right: 0px;margin-top: 3%;margin-left: 10%;">
     <div class="btn-toolbar"
       style="width: fit-content;height: 45px;margin-right: 10%;margin-bottom: 0;margin-top: 3%;margin-left: 0;">
-      <div class="btn-group" role="group"><a class="btn btn-primary" role="button" data-bss-hover-animate="bounce"
+      <div class="btn-group" role="group"><a class="btn btn-primary zoombtn" role="button"
           style="margin: 5px;background: rgba(0,7,17,0.33);border-radius: 20px;border-width: 0px;height: 36px;"
-          href="aniketrajsingh.github.io/aniketrajsingh">Portfolio 1</a><button class="btn btn-primary"
-          data-bss-hover-animate="bounce" type="button"
+          href="https://aniketrajsingh.github.io/AniketRajSingh">Portfolio 1</a><button class="btn btn-primary zoombtn"
+         type="button"
           style="margin: 5px;background: rgba(0,7,17,0.33);border-width: 0px;border-radius: 20px;height: 36px;">Portfolio
           2</button></div>
-      <div class="btn-group" role="group"><button class="btn btn-primary" data-bss-hover-animate="bounce" type="button"
+      <div class="btn-group" role="group"><button class="btn btn-primary zoombtn" type="button"
           style="margin: 5px;background: rgba(0,7,17,0.33);border-width: 0px;border-radius: 20px;height: 36px;">Portfolio
-          3</button><button class="btn btn-primary" data-bss-hover-animate="bounce" type="button"
+          3</button><button class="btn btn-primary zoombtn" type="button"
           style="margin: 5px;background: rgba(0,7,17,0.33);border-width: 0px;border-radius: 20px;height: 36px;">Portfolio
           4</button></div>
     </div>
