--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       style="border-width: 0px;border-radius: 0px;background: rgba(0,7,17,0.33);margin-top: 0px;">
       <div class="col">
         <div class="d-flex flex-column flex-lg-row">
-          <div class="w-100"><video class="d-block w-100 fit-cover" width="560" height="200" loop="" autoplay="">
+          <div class="w-100"><video class="d-block w-100 fit-cover" src="assets/videos/Screen Recording 2022-09-11 at 4.34.32 PM.mov" width="shrink-to-fit" height="150" loop="" autoplay="true">
               <source type="video/webm">
             </video></div>
           <div class="py-4 py-lg-0 px-lg-4">
@@ -103,7 +103,7 @@
         <div class="col-md-8 col-lg-6 col-xl-5 col-xxl-4" style="margin-top: 50px;">
           <div class="card mb-5">
             <div class="card-body p-sm-5">
-              <h2 class="text-center mb-4">Contact us</h2>
+              <h2 class="text-center mb-4">Contact Me</h2>
               <form method="post">
                 <div class="mb-3"><input class="form-control" type="text" id="name-1" name="name" placeholder="Name">
                 </div>
